# GGJ2019

./: .clang-format  CMakeLists.txt  format.sh
resources/data/: characters.tsv
src/: Application.cpp  Application.h  Level.cpp  Level.h  ResourceManager.cpp  ResourceManager.h  main.cpp
src/Data/: AnimalData.cpp  AnimalData.h  Characters-Sheet1.csv  DataManager.cpp  DataManager.h  TenantCharacteristics.h  TenantData.cpp  TenantData.h  TenantFactory.cpp  TenantFactory.h  names  names_formatted  todo
src/Game/: DrawableObject.cpp  DrawableObject.h  GameStateManager.cpp  GameStateManager.h  Level.cpp  Level.h
src/UI/: Button.cpp  Button.h  ChooseWindow.cpp  ChooseWindow.h  CommonMessageWindow.cpp  CommonMessageWindow.h  DrawableObject.cpp  DrawableObject.h  GenericOkayWindowWithCallback.cpp  GenericWindow.cpp  GenericWindow.h  MessageWindow.cpp  MessageWindow.h  TenantView.cpp  TenantView.h  YesNoMessage.cpp  YesNoMessage.h
src/UI/GameStuff/: CashView.cpp  ChooseWindow.h  DayChangeWindow.cpp  DayChangeWindow.h  DayCounter.cpp  DayCounter.h  DenyTenantScreen.cpp  DenyTenantScreen.h  GameOverScreen.cpp  GameOverScreen.h  PlayerStatsScreen.cpp  PlayerStatsScreen.h  TenantKickEntry.cpp  TenantKickEntry.h  TenantKickScreen.cpp  TenantKickScreen.h  TenantOverview.cpp  TenantOverview.h  TenantView.cpp  TenantView.h  Title.cpp  Title.h
src/UI/generic/: Button.cpp  Button.h  CashView.cpp  CashView.h  DrawableObject.cpp  GenericWindow.h  (+6 more)
src/tools/: AudioOneShotEngine.cpp  AudioOneShotEngine.h  GameStateManager.cpp  GameStateManager.h  ResourceManager.cpp  ResourceManager.h
