cmake_minimum_required(VERSION 3.9)
project(GGJ19)

set(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp)

add_executable(GGJ19 ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(GGJ19 pthread)
TARGET_LINK_LIBRARIES(GGJ19 stdc++fs)
TARGET_LINK_LIBRARIES(GGJ19 sfml-system)
TARGET_LINK_LIBRARIES(GGJ19 sfml-audio)
TARGET_LINK_LIBRARIES(GGJ19 sfml-graphics)
TARGET_LINK_LIBRARIES(GGJ19 sfml-window)
TARGET_LINK_LIBRARIES(GGJ19 m)